# muse2

./: .gitignore  Overall_process.py  README.md  clean_csv.py  cli.py  engagement.py  faa.py  fft_energy.py  list_devices.py  main.py  monitor_raw.py  pyproject.toml  record_csv.py  requirements.txt
Data/: .gitkeep
src/signal_monitor/: __init__.py  __main__.py  cli.py  overall_process.py  paths.py
src/signal_monitor/analysis/: __init__.py  engagement.py  faa.py  fft_energy.py
src/signal_monitor/data_utils/: __init__.py  clean_csv.py  record_csv.py
src/signal_monitor/hardware/: __init__.py  list_devices.py  monitor_raw.py
